--- a/T2_COMPLETO.ipynb
+++ b/T2_COMPLETO.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "geographic-spokesman",
+   "execution_count": 1,
+   "id": "attractive-analyst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "combined-senior",
+   "execution_count": 21,
+   "id": "crude-appearance",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(67896, 2)\n"
+      "(180, 7)\n"
      ]
     },
     {
@@ -59,58 +59,88 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DEPTH</th>\n",
+       "      <th>GR_EDTC</th>\n",
+       "      <th>RHOZ</th>\n",
+       "      <th>AT90</th>\n",
+       "      <th>NPHI</th>\n",
+       "      <th>DTCO</th>\n",
        "      <th>GRAY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>804.000000</td>\n",
-       "      <td>91.7625</td>\n",
+       "      <td>3760.5000</td>\n",
+       "      <td>91.3814</td>\n",
+       "      <td>2.4628</td>\n",
+       "      <td>7.3590</td>\n",
+       "      <td>0.3476</td>\n",
+       "      <td>96.16321</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>804.000795</td>\n",
-       "      <td>98.2125</td>\n",
+       "      <td>3760.0002</td>\n",
+       "      <td>93.2939</td>\n",
+       "      <td>2.4621</td>\n",
+       "      <td>7.1500</td>\n",
+       "      <td>0.3430</td>\n",
+       "      <td>98.22157</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>804.001591</td>\n",
-       "      <td>101.8750</td>\n",
+       "      <td>3759.5017</td>\n",
+       "      <td>94.6595</td>\n",
+       "      <td>2.4672</td>\n",
+       "      <td>7.8973</td>\n",
+       "      <td>0.3525</td>\n",
+       "      <td>99.17777</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>804.002386</td>\n",
-       "      <td>96.8125</td>\n",
+       "      <td>3759.0054</td>\n",
+       "      <td>92.1709</td>\n",
+       "      <td>2.4651</td>\n",
+       "      <td>6.7629</td>\n",
+       "      <td>0.3502</td>\n",
+       "      <td>98.45484</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>804.003181</td>\n",
-       "      <td>98.0625</td>\n",
+       "      <td>3758.4998</td>\n",
+       "      <td>91.6159</td>\n",
+       "      <td>2.4629</td>\n",
+       "      <td>7.2644</td>\n",
+       "      <td>0.3567</td>\n",
+       "      <td>96.30795</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DEPTH      GRAY\n",
-       "0  804.000000   91.7625\n",
-       "1  804.000795   98.2125\n",
-       "2  804.001591  101.8750\n",
-       "3  804.002386   96.8125\n",
-       "4  804.003181   98.0625"
+       "       DEPTH  GR_EDTC    RHOZ    AT90    NPHI      DTCO  GRAY\n",
+       "0  3760.5000  91.3814  2.4628  7.3590  0.3476  96.16321   0.0\n",
+       "1  3760.0002  93.2939  2.4621  7.1500  0.3430  98.22157   0.0\n",
+       "2  3759.5017  94.6595  2.4672  7.8973  0.3525  99.17777   0.0\n",
+       "3  3759.0054  92.1709  2.4651  6.7629  0.3502  98.45484   0.0\n",
+       "4  3758.4998  91.6159  2.4629  7.2644  0.3567  96.30795   0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#para encontrar una grafica de excel y ponerla en python \n",
-    "datos = \"Processed_Images_T6.xlsx\" #busco el archivo y lo pego con el indicativo por ejemplo .xlsx\n",
-    "df = pd.read_excel(datos, sheet_name=\"T6\")#sacar del excel a python\n",
-    "df.drop(columns= [\"#\",\"PHOTO\"], inplace=True) #para borrar una columna que no queremos\n",
+    "datos = \"ML-Wells.xlsx\" #busco el archivo y lo pego con el indicativo por ejemplo .xlsx\n",
+    "df = pd.read_excel(datos, sheet_name=\"T2\")#sacar del excel a python\n",
+    "df.drop(columns= [\"PHOTO\",\"WELL\",\"Unnamed: 0\"], inplace=True) #para borrar una columna que no queremos\n",
     "df.sort_values(by=\"DEPTH\")\n",
     "#print(df.shape) #para saber el tamaño de como quedo antes de borrar los valore nulos\n",
     "df.dropna(inplace=True)\n",
@@ -122,19 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "amazing-geology",
+   "execution_count": 22,
+   "id": "combined-final",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0    47384\n",
-       "1.0    20512\n",
+       "0.0    166\n",
+       "1.0     14\n",
        "Name: cutoff, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +175,7 @@
     "# hacemos el condicional\n",
     "cut_off = 250\n",
     "for i in range (gray.shape[0]):\n",
-    "  if (gray[i] >= 80):\n",
+    "  if (gray[i] >= 170):\n",
     "    cutoff[i] = 1\n",
     "\n",
     "df['cutoff'] = cutoff\n",
@@ -155,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "peaceful-interim",
+   "execution_count": 23,
+   "id": "coated-impression",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaño de Entrenamiento:  47527\n",
-      "Tamaño de Prueba:  20369\n"
+      "Tamaño de Entrenamiento:  126\n",
+      "Tamaño de Prueba:  54\n"
      ]
     }
    ],
@@ -193,8 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "smooth-field",
+   "execution_count": 24,
+   "id": "ecological-spirituality",
    "metadata": {},
    "outputs": [
     {
@@ -204,75 +234,29 @@
       "\n",
       "Entrenando: PCA - RandomForest \n",
       "\n",
-      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\anaconda3\\envs\\VCThesis\\lib\\site-packages\\sklearn\\model_selection\\_search.py:918: UserWarning: One or more of the test scores are non-finite: [0.99933158        nan        nan 0.99913199        nan        nan\n",
-      " 0.99912731        nan        nan 0.99916681        nan        nan\n",
-      " 0.99926661        nan        nan 0.99925153        nan        nan\n",
-      " 0.99914706        nan        nan 0.99919696        nan        nan\n",
-      " 0.99916214        nan        nan 0.99918188        nan        nan\n",
-      " 0.99928636        nan        nan 0.99915746        nan        nan\n",
-      " 0.99916214        nan        nan 0.99923646        nan        nan\n",
-      " 0.99925726        nan        nan 0.99914238        nan        nan\n",
-      " 0.99913666        nan        nan 0.99914239        nan        nan\n",
-      " 0.99912731        nan        nan 0.99923178        nan        nan]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n",
       "\n",
-      "Mejores parámetros con PCA - RandomForest : {'class__max_depth': 8, 'class__n_estimators': 20, 'rep__n_components': 2}\n",
+      "Mejores parámetros con PCA - RandomForest : {'class__max_depth': 8, 'class__n_estimators': 20, 'rep__n_components': 7}\n",
       "\n",
-      "Cros-Score con PCA - RandomForest : 0.999\n",
+      "Cros-Score con PCA - RandomForest : 0.500\n",
       "\n",
       "\n",
       "Entrenando: Random Forest \n",
       "\n",
       "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n",
       "\n",
-      "Mejores parámetros con Random Forest : {'class__max_depth': 8, 'class__n_estimators': 60}\n",
+      "Mejores parámetros con Random Forest : {'class__max_depth': 8, 'class__n_estimators': 20}\n",
       "\n",
-      "Cros-Score con Random Forest : 1.000\n",
+      "Cros-Score con Random Forest : 0.500\n",
       "\n",
       "\n",
       "Entrenando: PCA - SVC \n",
       "\n",
-      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\anaconda3\\envs\\VCThesis\\lib\\site-packages\\sklearn\\model_selection\\_search.py:918: UserWarning: One or more of the test scores are non-finite: [0.99640152        nan        nan        nan 0.97814757        nan\n",
-      "        nan        nan 0.95863307        nan        nan        nan\n",
-      " 0.99900567        nan        nan        nan 0.99713445        nan\n",
-      "        nan        nan 0.98963593        nan        nan        nan\n",
-      " 0.99968449        nan        nan        nan 0.99798949        nan\n",
-      "        nan        nan 0.99432756        nan        nan        nan\n",
-      " 0.99981443        nan        nan        nan 0.99847549        nan\n",
-      "        nan        nan 0.99632147        nan        nan        nan\n",
-      " 0.99962991        nan        nan        nan 0.99893602        nan\n",
-      "        nan        nan 0.99688858        nan        nan        nan]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n",
       "\n",
-      "Mejores parámetros con PCA - SVC : {'class__C': 100, 'class__gamma': 0.01, 'rep__n_components': 2}\n",
+      "Mejores parámetros con PCA - SVC : {'class__C': 100, 'class__gamma': 0.01, 'rep__n_components': 7}\n",
       "\n",
-      "Cros-Score con PCA - SVC : 1.000\n",
+      "Cros-Score con PCA - SVC : 0.730\n",
       "\n",
       "\n",
       "Entrenando: SVC \n",
@@ -281,7 +265,7 @@
       "\n",
       "Mejores parámetros con SVC : {'class__C': 100, 'class__gamma': 0.01}\n",
       "\n",
-      "Cros-Score con SVC : 1.000\n",
+      "Cros-Score con SVC : 0.730\n",
       "\n"
      ]
     }
@@ -359,8 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "worse-photographer",
+   "execution_count": 25,
+   "id": "funded-issue",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +352,7 @@
      "output_type": "stream",
      "text": [
       "Validación: \n",
-      " {'PCA - RandomForest': 0.9985325718937464, 'Random Forest': 0.9999187784275504, 'PCA - SVC': 0.9995670793679907, 'SVC': 0.9995670793679907}\n"
+      " {'PCA - RandomForest': 0.5, 'Random Forest': 0.5, 'PCA - SVC': 0.729779411764706, 'SVC': 0.729779411764706}\n"
      ]
     }
    ],
@@ -379,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "laughing-lafayette",
+   "id": "perceived-recruitment",
    "metadata": {},
    "outputs": [],
    "source": []
