--- a/T6_COMPLETO.ipynb
+++ b/T6_COMPLETO.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "attractive-analyst",
+   "id": "fatal-adaptation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "crude-appearance",
+   "execution_count": 9,
+   "id": "hollow-gateway",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(48000, 2)\n"
+      "(216, 7)\n"
      ]
     },
     {
@@ -59,58 +59,88 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DEPTH</th>\n",
+       "      <th>GR_EDTC</th>\n",
+       "      <th>RHOZ</th>\n",
+       "      <th>AT90</th>\n",
+       "      <th>NPHI</th>\n",
+       "      <th>DTCO</th>\n",
        "      <th>GRAY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3671.000000</td>\n",
-       "      <td>28.6000</td>\n",
+       "      <td>3484.5061</td>\n",
+       "      <td>88.9094</td>\n",
+       "      <td>2.4670</td>\n",
+       "      <td>8.8005</td>\n",
+       "      <td>0.3477</td>\n",
+       "      <td>92.01340</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3671.001875</td>\n",
-       "      <td>27.9250</td>\n",
+       "      <td>3484.0056</td>\n",
+       "      <td>84.1737</td>\n",
+       "      <td>2.4635</td>\n",
+       "      <td>8.8252</td>\n",
+       "      <td>0.3383</td>\n",
+       "      <td>91.57937</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3671.003750</td>\n",
-       "      <td>27.3750</td>\n",
+       "      <td>3483.5027</td>\n",
+       "      <td>85.9207</td>\n",
+       "      <td>2.4642</td>\n",
+       "      <td>9.2523</td>\n",
+       "      <td>0.3422</td>\n",
+       "      <td>91.48260</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3671.005625</td>\n",
-       "      <td>28.4625</td>\n",
+       "      <td>3483.0022</td>\n",
+       "      <td>85.2922</td>\n",
+       "      <td>2.4670</td>\n",
+       "      <td>9.7221</td>\n",
+       "      <td>0.3252</td>\n",
+       "      <td>91.13451</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3671.007500</td>\n",
-       "      <td>29.5625</td>\n",
+       "      <td>3482.5049</td>\n",
+       "      <td>89.9095</td>\n",
+       "      <td>2.4710</td>\n",
+       "      <td>9.6451</td>\n",
+       "      <td>0.3186</td>\n",
+       "      <td>91.07773</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         DEPTH     GRAY\n",
-       "0  3671.000000  28.6000\n",
-       "1  3671.001875  27.9250\n",
-       "2  3671.003750  27.3750\n",
-       "3  3671.005625  28.4625\n",
-       "4  3671.007500  29.5625"
+       "       DEPTH  GR_EDTC    RHOZ    AT90    NPHI      DTCO  GRAY\n",
+       "0  3484.5061  88.9094  2.4670  8.8005  0.3477  92.01340   0.0\n",
+       "1  3484.0056  84.1737  2.4635  8.8252  0.3383  91.57937   0.0\n",
+       "2  3483.5027  85.9207  2.4642  9.2523  0.3422  91.48260   0.0\n",
+       "3  3483.0022  85.2922  2.4670  9.7221  0.3252  91.13451   0.0\n",
+       "4  3482.5049  89.9095  2.4710  9.6451  0.3186  91.07773   0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#para encontrar una grafica de excel y ponerla en python \n",
-    "datos = \"Processed_Images_T2.xlsx\" #busco el archivo y lo pego con el indicativo por ejemplo .xlsx\n",
-    "df = pd.read_excel(datos, sheet_name=\"T2\")#sacar del excel a python\n",
-    "df.drop(columns= [\"#\",\"PHOTO\"], inplace=True) #para borrar una columna que no queremos\n",
+    "datos = \"ML-Wells.xlsx\" #busco el archivo y lo pego con el indicativo por ejemplo .xlsx\n",
+    "df = pd.read_excel(datos, sheet_name=\"T6\")#sacar del excel a python\n",
+    "df.drop(columns= [\"PHOTO\",\"WELL\",\"Unnamed: 0\"], inplace=True) #para borrar una columna que no queremos\n",
     "df.sort_values(by=\"DEPTH\")\n",
     "#print(df.shape) #para saber el tamaño de como quedo antes de borrar los valore nulos\n",
     "df.dropna(inplace=True)\n",
@@ -122,19 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "combined-final",
+   "execution_count": 12,
+   "id": "violent-health",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0    25332\n",
-       "0.0    22668\n",
+       "0.0    190\n",
+       "1.0     26\n",
        "Name: cutoff, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +175,7 @@
     "# hacemos el condicional\n",
     "cut_off = 250\n",
     "for i in range (gray.shape[0]):\n",
-    "  if (gray[i] >= 80):\n",
+    "  if (gray[i] >= 140):\n",
     "    cutoff[i] = 1\n",
     "\n",
     "df['cutoff'] = cutoff\n",
@@ -155,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "coated-impression",
+   "execution_count": 13,
+   "id": "adjusted-california",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaño de Entrenamiento:  33600\n",
-      "Tamaño de Prueba:  14400\n"
+      "Tamaño de Entrenamiento:  151\n",
+      "Tamaño de Prueba:  65\n"
      ]
     }
    ],
@@ -193,8 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "viral-anger",
+   "execution_count": 14,
+   "id": "agreed-julian",
    "metadata": {},
    "outputs": [
     {
@@ -204,34 +234,11 @@
       "\n",
       "Entrenando: PCA - RandomForest \n",
       "\n",
-      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\anaconda3\\envs\\VCThesis\\lib\\site-packages\\sklearn\\model_selection\\_search.py:918: UserWarning: One or more of the test scores are non-finite: [0.99731485        nan        nan 0.99713905        nan        nan\n",
-      " 0.9971258         nan        nan 0.99737456        nan        nan\n",
-      " 0.99726508        nan        nan 0.99758685        nan        nan\n",
-      " 0.99790363        nan        nan 0.99777426        nan        nan\n",
-      " 0.99764654        nan        nan 0.99775933        nan        nan\n",
-      " 0.99774104        nan        nan 0.99761835        nan        nan\n",
-      " 0.99785053        nan        nan 0.99794506        nan        nan\n",
-      " 0.99778419        nan        nan 0.99762497        nan        nan\n",
-      " 0.99797656        nan        nan 0.9976117         nan        nan\n",
-      " 0.99782565        nan        nan 0.99788536        nan        nan]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n",
       "\n",
-      "Mejores parámetros con PCA - RandomForest : {'class__max_depth': 15, 'class__n_estimators': 40, 'rep__n_components': 2}\n",
+      "Mejores parámetros con PCA - RandomForest : {'class__max_depth': 12, 'class__n_estimators': 20, 'rep__n_components': 7}\n",
       "\n",
-      "Cros-Score con PCA - RandomForest : 0.996\n",
+      "Cros-Score con PCA - RandomForest : 0.694\n",
       "\n",
       "\n",
       "Entrenando: Random Forest \n",
@@ -240,48 +247,25 @@
       "\n",
       "Mejores parámetros con Random Forest : {'class__max_depth': 8, 'class__n_estimators': 20}\n",
       "\n",
-      "Cros-Score con Random Forest : 1.000\n",
+      "Cros-Score con Random Forest : 0.889\n",
       "\n",
       "\n",
       "Entrenando: PCA - SVC \n",
       "\n",
-      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\anaconda3\\envs\\VCThesis\\lib\\site-packages\\sklearn\\model_selection\\_search.py:918: UserWarning: One or more of the test scores are non-finite: [0.99420213        nan        nan        nan 0.99354045        nan\n",
-      "        nan        nan 0.9781867         nan        nan        nan\n",
-      " 0.99918405        nan        nan        nan 0.99647081        nan\n",
-      "        nan        nan 0.9910196         nan        nan        nan\n",
-      " 0.99891039        nan        nan        nan 0.99804633        nan\n",
-      "        nan        nan 0.99300475        nan        nan        nan\n",
-      " 0.99909942        nan        nan        nan 0.99886561        nan\n",
-      "        nan        nan 0.99426514        nan        nan        nan\n",
-      " 0.99892361        nan        nan        nan 0.99899166        nan\n",
-      "        nan        nan 0.99552549        nan        nan        nan]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n",
       "\n",
-      "Mejores parámetros con PCA - SVC : {'class__C': 20, 'class__gamma': 0.01, 'rep__n_components': 2}\n",
+      "Mejores parámetros con PCA - SVC : {'class__C': 100, 'class__gamma': 0.001, 'rep__n_components': 6}\n",
       "\n",
-      "Cros-Score con PCA - SVC : 0.998\n",
+      "Cros-Score con PCA - SVC : 0.871\n",
       "\n",
       "\n",
       "Entrenando: SVC \n",
       "\n",
       "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
       "\n",
-      "Mejores parámetros con SVC : {'class__C': 20, 'class__gamma': 0.01}\n",
+      "Mejores parámetros con SVC : {'class__C': 100, 'class__gamma': 0.001}\n",
       "\n",
-      "Cros-Score con SVC : 0.998\n",
+      "Cros-Score con SVC : 0.871\n",
       "\n"
      ]
     }
@@ -359,8 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "above-estate",
+   "execution_count": 15,
+   "id": "theoretical-hartford",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +352,7 @@
      "output_type": "stream",
      "text": [
       "Validación: \n",
-      " {'PCA - RandomForest': 0.9964474634605468, 'Random Forest': 0.999802683504341, 'PCA - SVC': 0.9977363318871452, 'SVC': 0.9977363318871452}\n"
+      " {'PCA - RandomForest': 0.6944444444444443, 'Random Forest': 0.8888888888888888, 'PCA - SVC': 0.871345029239766, 'SVC': 0.871345029239766}\n"
      ]
     }
    ],
@@ -379,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "found-theorem",
+   "id": "emerging-ready",
    "metadata": {},
    "outputs": [],
    "source": []
